--- a/modules/ROOT/pages/intro.adoc
+++ b/modules/ROOT/pages/intro.adoc
@@ -1,4 +1,7 @@
-## Purpose
+= Introduction
+include::_attributes.adoc[]
+
+== Purpose
 
 As microservices-based applications become more prevalent, both the number of
 and complexity of their interactions increases. Up until now much of the
@@ -14,7 +17,7 @@ some of these features to a simple polyglot microservices application running
 on top of OpenShift Container Platform using OpenShift Service Mesh, an open
 platform to connect, manage, and secure microservices.
 
-## Background
+== Background
 
 Red Hat OpenShift Service Mesh provides an easy way to create a network of
 deployed services with load balancing, service-to-service authentication,
@@ -36,13 +39,13 @@ behavior of the mesh.
 
 These components combined together make up the Red Hat OpenShift Service Mesh.
 
-## Conventions
+== Conventions
 You will see various code and command blocks throughout these exercises. Some of
 the command blocks can be executed directly while others will require modification,
 of the command before execution. If you see a command block with a red border
 (see below), the command will require slight modification.
 
-[source,none,role="copypaste copypaste-warning"]
+[source,none,role="copypaste copypaste-warning",subs="verbatim,attributes"]
 ----
 some command to modify
 ----
@@ -55,7 +58,7 @@ command block executes in is pre-determined and will be indicated to you. For
 example, command blocks with looping scripts will be executed in the lower
 terminal like below:
 
-[source,bash,role="execute-2"]
+[source,bash,role="execute-2",subs="verbatim,attributes"]
 ----
 for i in 1 2 3; do echo "hello $i"; done
 ----
@@ -64,7 +67,7 @@ For non-terminating loops, you will have to click the lower terminal and then
 press Ctrl+C to terminate the program. For example, try executing the next
 code block:
 
-[source,bash,role="execute-2"]
+[source,bash,role="execute-2",subs="verbatim,attributes"]
 ----
 echo "A load generating script is running in the next step. Ctrl+C to stop"
 while :;do echo "this won't print" &> /dev/null ; done
@@ -72,19 +75,19 @@ while :;do echo "this won't print" &> /dev/null ; done
 
 For ordinary commands, we will be using the upper terminal:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 echo "Hello World"
 ----
 
-## Getting Started
+== Getting Started
 The terminals are running in a container inside the same OpenShift cluster
 where you will be using the service mesh. That container has many utilities
 pre-installed, including the `oc` CLI. The Service Mesh control plane is
 already deployed with several application components in an OpenShift
 Container Platform 4 environment.
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 oc version
 ----
@@ -92,7 +95,7 @@ oc version
 When you logged in earlier with your credentials, this lab guide and its
 terminals became logged in as you, too:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 oc whoami
 ----
@@ -101,7 +104,7 @@ You can access the OpenShift web console by clicking on word *Console* on the
 toolbar above your terminal. To come back to the terminals, just click
 *Terminal*.
 
-## Before Continuing
+== Before Continuing
 While all of the exercises can stand alone and you can do them in any order,
 most of them involve looking at the Kiali observability interface and/or
 Jaeger's tracing interface. As such, please make sure to complete the
