--- a/modules/ROOT/pages/circuit-breaking.adoc
+++ b/modules/ROOT/pages/circuit-breaking.adoc
@@ -1,4 +1,5 @@
 = Circuit Breaking/Timeouts
+include::_attributes.adoc[]
 
 Istio provides opt-in failure recovery and fault injection features that you
 can configure dynamically at runtime. Using these features helps your
@@ -15,9 +16,9 @@ visualize these capabilities in Kiali.
 You only need the `customer` Virtual Service and Gateway, but if you have the
 `recommendation` Destination Rule from other exercises, that's OK:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc -n %username%-tutorial get istio-io
+oc -n {username}-tutorial get istio-io
 ----
 
 And you should see something like the following:
@@ -44,7 +45,7 @@ failed connections N more times. Istio by default implements retries for
 `VirtualService` endpoints. You will make now make recommendation-v2 fail
 100% of the time so that we can observe this retry behavior:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh misbehave
 ----
@@ -59,7 +60,7 @@ This is a special endpoint that will toggle the recommendation application to
 return only `503`s. You can validate that the v2 endpoint now only returns
 `503` with the following:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/curl_recommendation_args.sh v2
 ----
@@ -68,15 +69,15 @@ However, you will see that a normal request that goes through the entire set
 of microservices will work every time. This is because the mesh is
 implementing retries:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-export INGRESS_GATEWAY=$(oc get route -n %username%-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
-for x in $(seq 1 10); do curl http://${INGRESS_GATEWAY}; done
+export INGRESS_GATEWAY=$(oc get route -n {username}-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
+for x in $(seq 1 10); do curl http://$\{INGRESS_GATEWAY\}; done
 ----
 
 Start generating traffic in the background:
 
-[source,bash,role="execute-2"]
+[source,bash,role="execute-2",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/curl_customer_quiet.sh
 ----
@@ -94,7 +95,7 @@ Even though the recommendation v2 has no traffic logged, the client has a
 
 Now, make the pod v2 behave well again:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh behave
 ----
@@ -116,7 +117,7 @@ failing.
 First, introduce some wait time in `recommendation v2` by making it a slow
 performer with a 3 second delay by running the command
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh timeout?timeout=3
 ----
@@ -149,7 +150,7 @@ information, make sure that you visit the Jaeger UI directly in order to
 accept the SSL certificate and grant permissions to Jaeger. In this lab
 guide, you can do this by clicking on "Console" to open the OpenShift web
 console, then click "Networking" -> "Routes" and make sure to select the
-`%username%-smcp` project (at the top) in order to find the URL for Jaeger.
+`{username}-smcp` project (at the top) in order to find the URL for Jaeger.
 
 [#img-timeout-v1]
 .Kiali Distributed Tracing for Recommendation v1
@@ -163,9 +164,9 @@ Note the duration of v2 is > 3s compared to the ms time of v1 and v3
 
 Now, add the timeout rule:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc create -n %username%-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-timeout.yml
+oc create -n {username}-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-timeout.yml
 ----
 
 This file looks like:
@@ -193,10 +194,10 @@ You will see it return v1 or v3 after waiting about 1 second. You don't see
 v2 anymore because the response from v2 expires after the timeout period and
 it is never returned:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-export INGRESS_GATEWAY=$(oc get route -n %username%-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
-for x in $(seq 1 10); do curl http://${INGRESS_GATEWAY}; done
+export INGRESS_GATEWAY=$(oc get route -n {username}-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
+for x in $(seq 1 10); do curl http://$\{INGRESS_GATEWAY\}; done
 ----
 
 You can also observe this in Kiali:
@@ -214,7 +215,7 @@ every third request, which would hit v2, ends up being timed out and retried.
 Change the implementation of `v2` back to the image that responds without the
 delay of 3 seconds:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh timeout?timeout=0
 ----
@@ -227,9 +228,9 @@ Timeout has been set to 0 seconds
 
 Then delete the virtual service created for timeout by:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc delete -n %username%-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-timeout.yml
+oc delete -n {username}-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-timeout.yml
 ----
 
 You will see something like:
@@ -245,14 +246,14 @@ Lastly, terminate the load script running in the bottom terminal with Control+C.
 
 Let's use a 34/33/33 split of traffic:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc create -n %username%-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-split.yml
+oc create -n {username}-tutorial -f /opt/app-root/workshop/content/src/istiofiles/virtual-service-recommendation-split.yml
 ----
 
 This YAML creates a `DestinationRule` and a `VirtualService` to control the traffic:
 
-[source,yaml,subs="+macros,+attributes"]
+[source,yaml,subs="+macros,+attributes",subs="verbatim,attributes"]
 ----
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -282,10 +283,10 @@ Note the weighting of the 3 recommendation destination versions.
 
 Run the following a few times to generate some load for Kiali to capture:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-export INGRESS_GATEWAY=$(oc get route -n %username%-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
-for x in $(seq 1 10); do curl http://${INGRESS_GATEWAY}; done
+export INGRESS_GATEWAY=$(oc get route -n {username}-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
+for x in $(seq 1 10); do curl http://$\{INGRESS_GATEWAY\}; done
 ----
 
 Now go to "Distributed Tracing" in Kiali and look at the response times. Note that all recommendation hits respond within single-digit milliseconds.
@@ -300,7 +301,7 @@ image:failfast.png[]
 Next, introduce some wait time in `recommendation v2` by making it a slow
 performer with a 3 second delay by running the command:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh timeout?timeout=3
 ----
@@ -313,10 +314,10 @@ Timeout has been set to 3 seconds
 
 Run the following a few times to generate new, "delayed" traffic:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-export INGRESS_GATEWAY=$(oc get route -n %username%-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
-for x in $(seq 1 10); do curl http://${INGRESS_GATEWAY}; done
+export INGRESS_GATEWAY=$(oc get route -n {username}-smcp istio-ingressgateway -o 'jsonpath={.spec.host}')
+for x in $(seq 1 10); do curl http://$\{INGRESS_GATEWAY\}; done
 ----
 
 [#img-nocicuit]
@@ -335,15 +336,15 @@ getting queued or making the instance/pod even slower. So we'll add a circuit
 breaker that will *open* whenever we have more than 1 request being handled
 by any instance/pod:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc apply -n %username%-tutorial -f /opt/app-root/workshop/content/src/istiofiles/destination-rule-recommendation_cb_policy_version_v2.yml
+oc apply -n {username}-tutorial -f /opt/app-root/workshop/content/src/istiofiles/destination-rule-recommendation_cb_policy_version_v2.yml
 ----
 
 This file defines the Istio circuit breaker logic to prevent connections to
 V2 from piling up:
 
-[source,yaml,subs="+macros,+attributes"]
+[source,yaml,subs="+macros,+attributes",subs="verbatim,attributes"]
 ----
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
@@ -381,7 +382,7 @@ object(`DestinationRule` called `recommendation`) to be updated.
 
 You will see something like:
 
-[source,bash,role="execute-2"]
+[source,bash,role="execute-2",subs="verbatim,attributes"]
 ----
 destinationrule.networking.istio.io/recommendation configured
 ----
@@ -390,7 +391,7 @@ Now let's see what is the behavior of the system running some load again.
 This script runs roughly 20 concurrent requests (it performs `curl` in the
 background without waiting for the command to finish):
 
-[source,bash,role="execute-2"]
+[source,bash,role="execute-2",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/loadtest_quiet.sh
 ----
@@ -411,7 +412,7 @@ can also see the little lightning icon indicating a breaker is configured.
 Change the implementation of `v2` back to the image that responds without the
 delay of 3 seconds:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
 bash /opt/app-root/workshop/content/scripts/retries.sh timeout?timeout=0
 ----
@@ -424,7 +425,7 @@ Timeout has been set to 0 seconds
 
 Then delete the virtual service and the destination rule created for circuit braking by:
 
-[source,bash,role="execute-1"]
+[source,bash,role="execute-1",subs="verbatim,attributes"]
 ----
-oc delete -n %username%-tutorial virtualservice.networking.istio.io/recommendation
+oc delete -n {username}-tutorial virtualservice.networking.istio.io/recommendation
 ----
